--- a/TODO
+++ b/TODO
@@ -8,3 +8,18 @@
 * parted support needed for filesystem detection #567176
 * Resizing?
 * Allow forcing use of btrfs for /boot (would probably work with eg, lilo)
+
+* How about installation into different subvolumes?
+
+  Example:
+  / (root), /usr, /var and /home each on the same btrfs filesystem,
+  but as separate named subvolumes (root/default, usr, var and home).
+  
+  This would break the one filesystem==one mount concept currently
+  used by the partitioner.  Here, one filesystem would be mounted
+  in several places, but with a slightly different subvol mount
+  option.  Maybe handle like LVM, where there's a separate dialogue
+  for creating LVs (subvolumes), and then select individual
+  subvolumes on the main partitioning dialogue for mounting in a
+  given location.
+
