--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,7 @@
-partman-btrfs (1) UNRELEASED; urgency=low
+partman-btrfs (1) unstable; urgency=low
 
+  [ Joey Hess ]
   * Took partman-xfs and s/xfs/btrfs/, essentially.
   * Added error messages if /boot is on btrfs.
 
- -- Joey Hess <joeyh@debian.org>  Thu,  4 Mar 2004 12:42:40 -0500
+ -- Colin Watson <cjwatson@debian.org>  Mon, 14 Jun 2010 14:08:21 +0100
