--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,8 @@
-partman-btrfs (2) UNRELEASED; urgency=low
+partman-btrfs (2) unstable; urgency=low
 
   * errors=remount-ro doesn't work.  Remove it.
 
- -- Colin Watson <cjwatson@debian.org>  Fri, 18 Jun 2010 11:20:14 +0100
+ -- Colin Watson <cjwatson@debian.org>  Fri, 18 Jun 2010 11:24:31 +0100
 
 partman-btrfs (1) unstable; urgency=low
 
