Use 'dh $@ --options' rather than 'dh --options $@', for forward-compatibility with debhelper v8.
r63906

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+partman-btrfs (3) UNRELEASED; urgency=low
+
+  * Use 'dh $@ --options' rather than 'dh --options $@', for
+    forward-compatibility with debhelper v8.
+
+ -- Colin Watson <cjwatson@debian.org>  Tue, 13 Jul 2010 10:32:56 +0100
+
 partman-btrfs (2) unstable; urgency=low
 
   * errors=remount-ro doesn't work.  Remove it.
