--- a/debian/po/he.po
+++ b/debian/po/he.po
@@ -22,6 +22,7 @@ msgstr ""
 "PO-Revision-Date: 2010-08-22 00:03+0300\n"
 "Last-Translator: Lior Kaplan <kaplan@debian.org>\n"
 "Language-Team: Hebrew <>\n"
+"Language: he\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
