[l10n] [SILENT_COMMIT]  Commit changed/added files

--- a/debian/po/pl.po
+++ b/debian/po/pl.po
@@ -31,7 +31,7 @@ msgstr ""
 "Project-Id-Version: debian-installer\n"
 "Report-Msgid-Bugs-To: partman-btrfs@packages.debian.org\n"
 "POT-Creation-Date: 2010-07-17 06:23+0000\n"
-"PO-Revision-Date: 2011-09-18 21:28+0100\n"
+"PO-Revision-Date: 2011-09-26 10:46+0100\n"
 "Last-Translator: Marcin Owsiany <porridge@debian.org>\n"
 "Language-Team: Polish <debian-l10n-polish@lists.debian.org>\n"
 "Language: pl\n"
@@ -49,7 +49,7 @@ msgstr ""
 #. Short file system name (untranslatable in many languages)
 #: ../partman-btrfs.templates:1001 ../partman-btrfs.templates:3001
 msgid "btrfs"
-msgstr ""
+msgstr "btrfs"
 
 #. Type: text
 #. Description
@@ -57,7 +57,7 @@ msgstr ""
 #. File system name
 #: ../partman-btrfs.templates:2001
 msgid "btrfs journaling file system"
-msgstr ""
+msgstr "System plików btrfs z księgowaniem"
 
 #. Type: error
 #. Description
@@ -65,6 +65,8 @@ msgstr ""
 #: ../partman-btrfs.templates:4001
 msgid "btrfs root file system not supported without separate /boot"
 msgstr ""
+"btrfs jako główny system plików jest nieobsługiwany bez osobnej partycji /"
+"boot"
 
 #. Type: error
 #. Description
@@ -74,6 +76,8 @@ msgid ""
 "Your root file system is a btrfs file system. This is not supported by the "
 "boot loader used by default by this installer."
 msgstr ""
+"Twój główny system plików to btrfs. To zazwyczaj powoduje problemy z "
+"programem rozruchowym, który jest domyślnie używany przez instalator."
 
 #. Type: error
 #. Description
@@ -83,13 +87,14 @@ msgid ""
 "You should use a small /boot partition with another file system, such as "
 "ext3."
 msgstr ""
+"Powinieneś użyć małej partycji /boot z innym systemem plików, np. ext3."
 
 #. Type: error
 #. Description
 #. :sl2:
 #: ../partman-btrfs.templates:5001
 msgid "btrfs file system not supported for /boot"
-msgstr ""
+msgstr "Użyć nieobsługiwanego systemu plików btrfs dla /boot?"
 
 #. Type: error
 #. Description
@@ -99,6 +104,8 @@ msgid ""
 "You have mounted a btrfs file system as /boot. This is not supported by the "
 "boot loader used by default by this installer."
 msgstr ""
+"Twój system plików /boot to btrfs. To zazwyczaj powoduje problemy z "
+"programem rozruchowym, który jest domyślnie używany przez instalator."
 
 #. Type: error
 #. Description
@@ -106,4 +113,4 @@ msgstr ""
 #: ../partman-btrfs.templates:5001
 msgid ""
 "You should use another file system, such as ext3, for the /boot partition."
-msgstr ""
+msgstr "Powinieneś użyć innego systemu plików dla partycji /boot, np. ext3."
