Allow btrfs /boot partition. This is supported by grub2 and lilo.
Now that grub2 supports btrfs, it seems best to drop this check.
Although I don't know about other boot loaders, and it's also possible
in some situations for d-i to choose to use grub-legacy, which would
fail on btrfs.

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+partman-btrfs (7) UNRELEASED; urgency=low
+
+  * Allow btrfs /boot partition. This is supported by grub2 and lilo.
+
+ -- Joey Hess <joeyh@debian.org>  Mon, 26 Sep 2011 21:51:07 -0400
+
 partman-btrfs (6) unstable; urgency=low
 
   [ Updated translations ]
