--- a/debian/po/ast.po
+++ b/debian/po/ast.po
@@ -9,13 +9,20 @@
 # in doc/i18n/i18n.txt
 # astur <malditoastur@gmail.com>, 2010
 # Marquinos <maacub@gmail.com>, 2010.
+#
+# Translations from iso-codes:
+#   Marcos Alvarez Costales <marcoscostales@gmail.com>, 2009, 2010.
+#
+# Copyright (c) 2008 Rosetta Contributors and Canonical Ltd 2008
+# Marquinos <maacub@gmail.com>, 2008.
+#
 msgid ""
 msgstr ""
 "Project-Id-Version: debian-installer\n"
 "Report-Msgid-Bugs-To: partman-btrfs@packages.debian.org\n"
-"POT-Creation-Date: 2010-07-17 06:23+0000\n"
-"PO-Revision-Date: 2010-08-10 18:47+0200\n"
-"Last-Translator: maacub <maacub@gmail.com>\n"
+"POT-Creation-Date: 2011-09-27 22:48+0000\n"
+"PO-Revision-Date: 2011-05-03 21:27+0100\n"
+"Last-Translator: MAAC <maacub@gmail.com>\n"
 "Language-Team: laptop\n"
 "Language: en\n"
 "MIME-Version: 1.0\n"
@@ -42,59 +49,3 @@ msgstr "btrfs"
 #: ../partman-btrfs.templates:2001
 msgid "btrfs journaling file system"
 msgstr "Sistema de ficheros tresaccional btrfs"
-
-#. Type: error
-#. Description
-#. :sl2:
-#: ../partman-btrfs.templates:4001
-msgid "btrfs root file system not supported without separate /boot"
-msgstr "Sistema de ficheros root btrfs nun sofitáu con un /boot separtáu"
-
-#. Type: error
-#. Description
-#. :sl2:
-#: ../partman-btrfs.templates:4001
-msgid ""
-"Your root file system is a btrfs file system. This is not supported by the "
-"boot loader used by default by this installer."
-msgstr ""
-"El to sistema de ficheros root ye un sistema de ficheros btrfs. Esto nun ta "
-"sofitao pol cargador d'arranque usáu por defeutu por esti instalador."
-
-#. Type: error
-#. Description
-#. :sl2:
-#: ../partman-btrfs.templates:4001
-msgid ""
-"You should use a small /boot partition with another file system, such as "
-"ext3."
-msgstr ""
-"Debieres usar una partición pequeña /boot con otru sistema de ficheros, cómo "
-"ext3."
-
-#. Type: error
-#. Description
-#. :sl2:
-#: ../partman-btrfs.templates:5001
-msgid "btrfs file system not supported for /boot"
-msgstr "Sistema de ficheros btrfs nun sofitada pa /boot?"
-
-#. Type: error
-#. Description
-#. :sl2:
-#: ../partman-btrfs.templates:5001
-msgid ""
-"You have mounted a btrfs file system as /boot. This is not supported by the "
-"boot loader used by default by this installer."
-msgstr ""
-"Tienes montáu un sistema de ficheros btrfs cómo /boot. Esto nun ta sofitao "
-"pol cargador d'arranque usáu por defeutu por esti instalador."
-
-#. Type: error
-#. Description
-#. :sl2:
-#: ../partman-btrfs.templates:5001
-msgid ""
-"You should use another file system, such as ext3, for the /boot partition."
-msgstr ""
-"Debieres usar otru sistema de ficheros, cómo ext3, pa la partición /boot."
