--- a/debian/po/kn.po
+++ b/debian/po/kn.po
@@ -11,6 +11,7 @@
 # shashi kiran <shashi859@gmail.com>, 2010, 2011.
 # Prabodh CP <prabodhcp@gmail.com>, 2011.
 #
+# Credits: Thanks to contributions from Free Software Movement Karnataka (FSMK), 2011.
 #
 # Translations from iso-codes:
 #   Shankar Prasad <svenkate@redhat.com>, 2009.
@@ -20,8 +21,8 @@ msgstr ""
 "Project-Id-Version: kn\n"
 "Report-Msgid-Bugs-To: partman-btrfs@packages.debian.org\n"
 "POT-Creation-Date: 2011-09-27 22:48+0000\n"
-"PO-Revision-Date: 2011-11-01 23:07+0530\n"
-"Last-Translator: vignesh prabhu <stove311987@gmail.com>\n"
+"PO-Revision-Date: 2011-11-18 19:11+0530\n"
+"Last-Translator: Prabodh C P <prabodh@fsmk.org>\n"
 "Language-Team: Kannada <debian-l10n-kannada@lists.debian.org>\n"
 "Language: kn\n"
 "MIME-Version: 1.0\n"
@@ -38,7 +39,7 @@ msgstr ""
 #. Short file system name (untranslatable in many languages)
 #: ../partman-btrfs.templates:1001 ../partman-btrfs.templates:3001
 msgid "btrfs"
-msgstr ""
+msgstr "btrfs"
 
 #. Type: text
 #. Description
