--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,16 @@
+partman-btrfs (9) unstable; urgency=low
+
+  [ Updated translations ]
+  * Tibetan (bo.po) by Tennom
+  * Welsh (cy.po) by Dafydd Tomos
+  * Lithuanian (lt.po) by Rimas Kudelis
+  * Latvian (lv.po) by Rūdolfs Mazurs
+  * Macedonian (mk.po) by Arangel Angov
+  * Panjabi (pa.po) by A S Alam
+  * Portuguese (Brazil) (pt_BR.po) by Felipe Augusto van de Wiel (faw)
+
+ -- Christian Perrier <bubulle@debian.org>  Fri, 15 Jun 2012 16:02:10 +0200
+
 partman-btrfs (8) unstable; urgency=low
 
   [ Updated translations ]
