--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,12 @@
+partman-btrfs (11) UNRELEASED; urgency=low
+
+  * Team upload
+
+  [ Updated translations ]
+  * Croatian (hr.po) by Tomislav Krznar
+
+ -- Christian Perrier <bubulle@debian.org>  Sun, 19 May 2013 17:36:34 +0200
+
 partman-btrfs (10) unstable; urgency=low
 
   [ Updated translations ]
