--- a/debian/changelog
+++ b/debian/changelog
@@ -5,6 +5,9 @@ partman-btrfs (11) UNRELEASED; urgency=low
   [ Updated translations ]
   * Croatian (hr.po) by Tomislav Krznar
 
+  [ Christian Perrier ]
+  * Add myself to Uploaders
+
  -- Christian Perrier <bubulle@debian.org>  Sun, 19 May 2013 17:36:34 +0200
 
 partman-btrfs (10) unstable; urgency=low
