--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-partman-btrfs (11) UNRELEASED; urgency=low
+partman-btrfs (11) unstable; urgency=low
 
   * Team upload
 
@@ -9,7 +9,7 @@ partman-btrfs (11) UNRELEASED; urgency=low
   * Add myself to Uploaders
   * Rempalce XC-Package-Type by Package-Type
 
- -- Christian Perrier <bubulle@debian.org>  Sun, 19 May 2013 17:36:34 +0200
+ -- Christian Perrier <bubulle@debian.org>  Sun, 19 May 2013 17:47:44 +0200
 
 partman-btrfs (10) unstable; urgency=low
 
