--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+partman-btrfs (12) UNRELEASED; urgency=low
+
+  * Set debian source format to '3.0 (native)'.
+  * Bump debhelper compat level to 9.
+  * Set Vcs-* to canonical format.
+
+ -- Dmitrijs Ledkovs <xnox@debian.org>  Fri, 07 Jun 2013 00:26:13 +0100
+
 partman-btrfs (11) unstable; urgency=low
 
   * Team upload
