--- a/debian/changelog
+++ b/debian/changelog
@@ -1,10 +1,11 @@
-partman-btrfs (12) UNRELEASED; urgency=low
+partman-btrfs (12) unstable; urgency=low
 
+  [ Dmitrijs Ledkovs ]
   * Set debian source format to '3.0 (native)'.
   * Bump debhelper compat level to 9.
   * Set Vcs-* to canonical format.
 
- -- Dmitrijs Ledkovs <xnox@debian.org>  Fri, 07 Jun 2013 00:26:13 +0100
+ -- Christian Perrier <bubulle@debian.org>  Sat, 13 Jul 2013 12:56:05 +0200
 
 partman-btrfs (11) unstable; urgency=low
 
