--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+partman-btrfs (13) unstable; urgency=low
+
+  [ Updated translations ]
+  * Tajik (tg.po) by Victor Ibragimov
+
+ -- Christian Perrier <bubulle@debian.org>  Sun, 08 Sep 2013 16:29:20 +0200
+
 partman-btrfs (12) unstable; urgency=low
 
   [ Dmitrijs Ledkovs ]
