--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+partman-btrfs (14) UNRELEASED; urgency=low
+
+  * Add nodiratime and discard mount options.
+
+ -- Colin Watson <cjwatson@debian.org>  Tue, 01 Oct 2013 10:16:37 +0100
+
 partman-btrfs (13) unstable; urgency=low
 
   [ Updated translations ]
