--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,6 @@
 partman-btrfs (14) UNRELEASED; urgency=low
 
-  * Add nodiratime and discard mount options.
+  * Add nodiratime and discard mount options (see #722598; LP: #978032).
 
  -- Colin Watson <cjwatson@debian.org>  Tue, 01 Oct 2013 10:16:37 +0100
 
