Force formatting as btrfs filesystem, to bypass mkfs.btrfs safety-check that target (possibly) contains existing filesystem when formatting partitions with btrfs. (LP: #1276356) (Closes: #721847)

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+partman-btrfs (15) UNRELEASED; urgency=medium
+
+  * Force formatting as btrfs filesystem, to bypass mkfs.btrfs
+    safety-check that target (possibly) contains existing filesystem when
+    formatting partitions with btrfs. (LP: #1276356) (Closes: #721847)
+
+ -- Dimitri John Ledkov <xnox@ubuntu.com>  Wed, 19 Mar 2014 00:06:00 +0000
+
 partman-btrfs (14) unstable; urgency=low
 
   * Add nodiratime and discard mount options (see #722598; LP: #978032).
