--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-partman-btrfs (20+nmu1) experimental; urgency=medium
+partman-btrfs (20+nmu1) unstable; urgency=medium
 
   * Non-maintainer upload.
   * Change dependency on btrfs-tools to btrfs-progs.
