--- a/debian/po/tl.po
+++ b/debian/po/tl.po
@@ -3,36 +3,6 @@
 #
 # DO NOT MODIFY THIS FILE DIRECTLY: SUCH CHANGES WILL BE LOST
 #
-# Tagalog messages for debian-installer.
-# Copyright (C) 2004-2010 Software in the Public Interest, Inc.
-# This file is distributed under the same license as debian-installer.
-# Ipinamamahagi ang talaksang ito alinsunod sa lisensiya ng debian-installer.
-# Eric Pareja <xenos@upm.edu.ph>, 2004-200
-# Rick Bahague, Jr. <rbahaguejr@gmail.com>, 2004
-# Reviewed by Roel Cantada on Feb-Mar 2005.
-# Sinuri ni Roel Cantada noong Peb-Mar 2005.
-# This file is maintained by Eric Pareja <eric.pareja@gmail.com>
-# Inaalagaan ang talaksang ito ni Eric Pareja <eric.pareja@gmail.com>
-#
-# ituloy angsulong mga kapatid http://www.upm.edu.ph/~xenos
-#
-#
-# Translations from iso-codes:
-#   Eric Pareja <xenos@upm.edu.ph> 2005,2006
-#
-msgid ""
-msgstr ""
-"Project-Id-Version: debian-installer\n"
-"Report-Msgid-Bugs-To: partman-btrfs@packages.debian.org\n"
-"POT-Creation-Date: 2011-09-27 22:48+0000\n"
-"PO-Revision-Date: \n"
-"Last-Translator: \n"
-"Language-Team: Tagalog <debian-tl@banwa.upm.edu.ph>\n"
-"Language: tl\n"
-"MIME-Version: 1.0\n"
-"Content-Type: text/plain; charset=UTF-8\n"
-"Content-Transfer-Encoding: 8bit\n"
-
 #. Type: text
 #. Description
 #. :sl2:
@@ -52,4 +22,4 @@ msgstr ""
 #: ../partman-btrfs.templates:2001
 #, fuzzy
 msgid "btrfs journaling file system"
-msgstr "Ext3 journaling file system"
+msgstr "ReiserFS journaling file system"
