--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+partman-btrfs (22) UNRELEASED; urgency=medium
+
+  * On s390x, zipl bootloader cannot handle /boot on btrfs. LP: #1609140
+
+ -- Dimitri John Ledkov <xnox@ubuntu.com>  Tue, 04 Oct 2016 13:15:35 +0100
+
 partman-btrfs (21) unstable; urgency=medium
 
   [ Nicholas D Steeves ]
