--- a/debian/po/be.po
+++ b/debian/po/be.po
@@ -22,7 +22,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: be\n"
 "Report-Msgid-Bugs-To: partman-btrfs@packages.debian.org\n"
-"POT-Creation-Date: 2011-09-27 22:48+0000\n"
+"POT-Creation-Date: 2016-10-04 22:00+0000\n"
 "PO-Revision-Date: 2015-12-21 15:13+0300\n"
 "Last-Translator: Viktar Siarheichyk <vics@fsfe.org>\n"
 "Language-Team: Debian l10n team for Belarusian <debian-l10n-belarusian@lists."
@@ -53,3 +53,63 @@ msgstr "btrfs"
 #: ../partman-btrfs.templates:2001
 msgid "btrfs journaling file system"
 msgstr "Файлавая сістэма btrfs з падтрымкай журнала"
+
+#. Type: error
+#. Description
+#. :sl2:
+#: ../partman-btrfs.templates:4001
+msgid "btrfs root file system not supported without separate /boot"
+msgstr ""
+"btrfs у якасці каранёвай файлавай сістэмы не падтрымліваецца без асобнага /"
+"boot"
+
+#. Type: error
+#. Description
+#. :sl2:
+#: ../partman-btrfs.templates:4001
+msgid ""
+"Your root file system is a btrfs file system. This is not supported by the "
+"boot loader used by default by this installer."
+msgstr ""
+"Вашая каранёвая файлавая сістэма мае тып btrfs. Гэта не падтрымліваецца "
+"загрузчыкам, які прадвызначана ўжываецца гэтай праграмай усталявання."
+
+#. Type: error
+#. Description
+#. :sl2:
+#: ../partman-btrfs.templates:4001
+#, fuzzy
+msgid ""
+"You should use a small /boot partition with another file system, such as "
+"ext4."
+msgstr ""
+"Вам варта ўжываць маленькі падзел дыска /boot з файлавай сістэмай іншага "
+"тыпу (напрыклад, ext3)."
+
+#. Type: error
+#. Description
+#. :sl2:
+#: ../partman-btrfs.templates:5001
+msgid "btrfs file system not supported for /boot"
+msgstr "Файлавая сістэма btrfs для /boot не падтрымліваецца"
+
+#. Type: error
+#. Description
+#. :sl2:
+#: ../partman-btrfs.templates:5001
+msgid ""
+"You have mounted a btrfs file system as /boot. This is not supported by the "
+"boot loader used by default by this installer."
+msgstr ""
+"У каталогу /boot прымацаваная файлавая сістэма тыпу btrfs. Гэта не "
+"падтрымліваецца загрузчыкам, які прадвызначана ўжываецца ў гэтай праграме "
+"ўсталявання."
+
+#. Type: error
+#. Description
+#. :sl2:
+#: ../partman-btrfs.templates:5001
+#, fuzzy
+msgid ""
+"You should use another file system, such as ext4, for the /boot partition."
+msgstr "Для падзелу /boot лепш ужыць іншую файлавую сістэму (напрыклад, ext3)."
