--- a/debian/po/da.po
+++ b/debian/po/da.po
@@ -6,7 +6,7 @@
 # translation of debian-installer_packages_po_sublevel1_da.po to
 # Danish messages for debian-installer.
 # This file is distributed under the same license as debian-installer.
-# Joe Hansen <joedalton2@yahoo.dk>, 2011, 2012, 2013, 2014, 2015.
+# Joe Hansen <joedalton2@yahoo.dk>, 2011, 2012, 2013, 2014, 2015, 2016.
 # Ask Hjorth Larsen <asklarsen@gmail.com>, 2010.
 # Mads Bille Lundby <lundbymads@gmail.com, 2009.
 # Henrik Christian Grove <debian@3001.dk>, 2008.
@@ -38,8 +38,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: debian-installer_packages_po_sublevel1_da\n"
 "Report-Msgid-Bugs-To: partman-btrfs@packages.debian.org\n"
-"POT-Creation-Date: 2011-09-27 22:48+0000\n"
-"PO-Revision-Date: 2015-08-16 20:20+0200\n"
+"POT-Creation-Date: 2016-10-04 22:00+0000\n"
+"PO-Revision-Date: 2016-09-18 20:20+0200\n"
 "Last-Translator: Joe Hansen <joedalton2@yahoo.dk>\n"
 "Language-Team: <dansk@dansk-gruppen.dk>\n"
 "Language: da\n"
@@ -67,3 +67,63 @@ msgstr "btrfs"
 #: ../partman-btrfs.templates:2001
 msgid "btrfs journaling file system"
 msgstr "»btrfs« journaliserende filsystem"
+
+#. Type: error
+#. Description
+#. :sl2:
+#: ../partman-btrfs.templates:4001
+msgid "btrfs root file system not supported without separate /boot"
+msgstr ""
+
+#. Type: error
+#. Description
+#. :sl2:
+#: ../partman-btrfs.templates:4001
+#, fuzzy
+msgid ""
+"Your root file system is a btrfs file system. This is not supported by the "
+"boot loader used by default by this installer."
+msgstr ""
+"Dit rodfilsystem er et JFS-filsystem. Dette kan give problemer med den "
+"opstartsindlæser, der som udgangspunkt bruges af dette installationsprogram."
+
+#. Type: error
+#. Description
+#. :sl2:
+#: ../partman-btrfs.templates:4001
+#, fuzzy
+msgid ""
+"You should use a small /boot partition with another file system, such as "
+"ext4."
+msgstr ""
+"Du bør bruge en lille /boot-partition med et andet filsystem, såsom ext3."
+
+#. Type: error
+#. Description
+#. :sl2:
+#: ../partman-btrfs.templates:5001
+#, fuzzy
+msgid "btrfs file system not supported for /boot"
+msgstr "Ingen filsystemer monteret på /target"
+
+#. Type: error
+#. Description
+#. :sl2:
+#: ../partman-btrfs.templates:5001
+#, fuzzy
+msgid ""
+"You have mounted a btrfs file system as /boot. This is not supported by the "
+"boot loader used by default by this installer."
+msgstr ""
+"Dit rodfilsystem er et JFS-filsystem som /boot. Dette kan give problemer med "
+"den opstartsindlæser, der som udgangspunkt bruges af dette "
+"installationsprogram."
+
+#. Type: error
+#. Description
+#. :sl2:
+#: ../partman-btrfs.templates:5001
+#, fuzzy
+msgid ""
+"You should use another file system, such as ext4, for the /boot partition."
+msgstr "Du bør benytte et andet filsystem, såsom ext3, til /boot-partitionen."
