--- a/debian/po/ja.po
+++ b/debian/po/ja.po
@@ -26,11 +26,11 @@ msgid ""
 msgstr ""
 "Project-Id-Version: debian-installer\n"
 "Report-Msgid-Bugs-To: partman-btrfs@packages.debian.org\n"
-"POT-Creation-Date: 2011-09-27 22:48+0000\n"
-"PO-Revision-Date: 2011-09-26 22:51+0900\n"
+"POT-Creation-Date: 2016-10-04 22:00+0000\n"
+"PO-Revision-Date: 2016-07-07 08:21+0900\n"
 "Last-Translator:  Kenshi Muto <kmuto@debian.org>\n"
-"Language-Team: Debian L10n Japanese <debian-l10n-japanese@lists.debian.org>\n"
-"Language: \n"
+"Language-Team: Debian L10n Japanese <debian-japanese@lists.debian.org>\n"
+"Language: ja\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -54,3 +54,66 @@ msgstr "btrfs"
 #: ../partman-btrfs.templates:2001
 msgid "btrfs journaling file system"
 msgstr "btrfs ジャーナリングファイルシステム"
+
+#. Type: error
+#. Description
+#. :sl2:
+#: ../partman-btrfs.templates:4001
+msgid "btrfs root file system not supported without separate /boot"
+msgstr ""
+
+#. Type: error
+#. Description
+#. :sl2:
+#: ../partman-btrfs.templates:4001
+#, fuzzy
+msgid ""
+"Your root file system is a btrfs file system. This is not supported by the "
+"boot loader used by default by this installer."
+msgstr ""
+"あなたのルートファイルシステムは JFS ファイルシステムです。これはおそらく、こ"
+"のインストーラのデフォルトで使われるブートローダにおいて問題を引き起こしま"
+"す。"
+
+#. Type: error
+#. Description
+#. :sl2:
+#: ../partman-btrfs.templates:4001
+#, fuzzy
+msgid ""
+"You should use a small /boot partition with another file system, such as "
+"ext4."
+msgstr ""
+"ext3 のような別のファイルシステムの小さな /boot パーティションを使うことをお"
+"勧めします。"
+
+#. Type: error
+#. Description
+#. :sl2:
+#: ../partman-btrfs.templates:5001
+#, fuzzy
+msgid "btrfs file system not supported for /boot"
+msgstr "/target にマウントされたファイルシステムがありません"
+
+#. Type: error
+#. Description
+#. :sl2:
+#: ../partman-btrfs.templates:5001
+#, fuzzy
+msgid ""
+"You have mounted a btrfs file system as /boot. This is not supported by the "
+"boot loader used by default by this installer."
+msgstr ""
+"/boot に JFS ファイルシステムがマウントされています。これはおそらく、このイン"
+"ストーラのデフォルトで使われるブートローダにおいて問題を引き起こします。"
+
+#. Type: error
+#. Description
+#. :sl2:
+#: ../partman-btrfs.templates:5001
+#, fuzzy
+msgid ""
+"You should use another file system, such as ext4, for the /boot partition."
+msgstr ""
+"/boot パーティションには、ext3 のような別のファイルシステムを使うことをお勧め"
+"します。"
