[l10n]  Commit changed/added files

--- a/debian/po/pt_BR.po
+++ b/debian/po/pt_BR.po
@@ -23,8 +23,8 @@ msgstr ""
 "Project-Id-Version: debian-installer\n"
 "Report-Msgid-Bugs-To: partman-btrfs@packages.debian.org\n"
 "POT-Creation-Date: 2016-10-04 22:00+0000\n"
-"PO-Revision-Date: 2016-03-03 09:13-0300\n"
-"Last-Translator: Adriano Rafael Gomes <adrianorg@arg.eti.br>\n"
+"PO-Revision-Date: 2016-10-05 08:25-0300\n"
+"Last-Translator: Adriano Rafael Gomes <adrianorg@debian.org>\n"
 "Language-Team: Brazilian Portuguese <debian-l10n-portuguese@lists.debian."
 "org>\n"
 "Language: pt_BR\n"
@@ -76,13 +76,12 @@ msgstr ""
 #. Description
 #. :sl2:
 #: ../partman-btrfs.templates:4001
-#, fuzzy
 msgid ""
 "You should use a small /boot partition with another file system, such as "
 "ext4."
 msgstr ""
 "Você deveria usar uma pequena partição /boot com um outro sistema de "
-"arquivos, como o ext3."
+"arquivos, como o ext4."
 
 #. Type: error
 #. Description
@@ -107,9 +106,8 @@ msgstr ""
 #. Description
 #. :sl2:
 #: ../partman-btrfs.templates:5001
-#, fuzzy
 msgid ""
 "You should use another file system, such as ext4, for the /boot partition."
 msgstr ""
-"Você deveria usar um outro sistema de arquivos, como ext3, para a partição /"
+"Você deveria usar um outro sistema de arquivos, como ext4, para a partição /"
 "boot."
