--- a/debian/po/tr.po
+++ b/debian/po/tr.po
@@ -29,7 +29,7 @@ msgstr ""
 "Project-Id-Version: debian-installer\n"
 "Report-Msgid-Bugs-To: partman-btrfs@packages.debian.org\n"
 "POT-Creation-Date: 2016-10-04 22:00+0000\n"
-"PO-Revision-Date: 2016-07-27 00:34+0300\n"
+"PO-Revision-Date: 2016-10-20 00:03+0300\n"
 "Last-Translator: Mert Dirik <mertdirik@gmail.com>\n"
 "Language-Team: Debian L10N Turkish\n"
 "Language: tr\n"
@@ -71,53 +71,48 @@ msgstr ""
 #. Description
 #. :sl2:
 #: ../partman-btrfs.templates:4001
-#, fuzzy
 msgid ""
 "Your root file system is a btrfs file system. This is not supported by the "
 "boot loader used by default by this installer."
 msgstr ""
-"Kök dosya sisteminiz JFS dosya sistemi. Bu durum, kurulum programı "
-"tarafından kullanılan öntanımlı önyükleyiciyle sorunlara yol açabilir."
+"Kök dosya sisteminiz btrfs dosya sistemi. Kurulum programının kullandığı "
+"öntanımlı önyükleyici bu yapılandırmayı desteklememektedir."
 
 #. Type: error
 #. Description
 #. :sl2:
 #: ../partman-btrfs.templates:4001
-#, fuzzy
 msgid ""
 "You should use a small /boot partition with another file system, such as "
 "ext4."
 msgstr ""
-"Ext3 gibi bir dosya sistemi üzerinde küçük bir /boot bölümü oluşturmalısınız."
+"Farklı bir dosya sistemi kullanan (örneğin ext4) küçük bir /boot bölümü "
+"oluşturmanız önerilir."
 
 #. Type: error
 #. Description
 #. :sl2:
 #: ../partman-btrfs.templates:5001
-#, fuzzy
 msgid "btrfs file system not supported for /boot"
-msgstr ""
-"btrfs kök dosya sistemi ancak ayrı bir /boot bölümüne sahip olmanız şartıyla "
-"kullanılabilir"
+msgstr "/boot bölümünde btrfs dosya sistemi desteklenmiyor"
 
 #. Type: error
 #. Description
 #. :sl2:
 #: ../partman-btrfs.templates:5001
-#, fuzzy
 msgid ""
 "You have mounted a btrfs file system as /boot. This is not supported by the "
 "boot loader used by default by this installer."
 msgstr ""
-"/boot dizinine bir JFS dosya sistemi bağlamışsınız. Bu durum, kurulum "
-"programı tarafından kullanılan öntanımlı önyükleyiciyle sorunlara yol "
-"açabilir."
+"/boot dizinine bir btrfs dosya sistemi bağladınız. Kurulum programının "
+"kullandığı öntanımlı önyükleyici bu yapılandırmayı desteklememektedir."
 
 #. Type: error
 #. Description
 #. :sl2:
 #: ../partman-btrfs.templates:5001
-#, fuzzy
 msgid ""
 "You should use another file system, such as ext4, for the /boot partition."
-msgstr "/boot için ext3 gibi başka bir dosya sistemi kullanmalısınız."
+msgstr ""
+"/boot bölümü için farklı bir dosya sistemi (örneğin ext4) kullanmanız "
+"önerilir."
