[l10n]  Commit changed/added files

--- a/debian/po/da.po
+++ b/debian/po/da.po
@@ -39,7 +39,7 @@ msgstr ""
 "Project-Id-Version: debian-installer_packages_po_sublevel1_da\n"
 "Report-Msgid-Bugs-To: partman-btrfs@packages.debian.org\n"
 "POT-Creation-Date: 2016-10-04 22:00+0000\n"
-"PO-Revision-Date: 2016-09-18 20:20+0200\n"
+"PO-Revision-Date: 2016-11-10 20:24+0200\n"
 "Last-Translator: Joe Hansen <joedalton2@yahoo.dk>\n"
 "Language-Team: <dansk@dansk-gruppen.dk>\n"
 "Language: da\n"
@@ -73,57 +73,52 @@ msgstr "»btrfs« journaliserende filsystem"
 #. :sl2:
 #: ../partman-btrfs.templates:4001
 msgid "btrfs root file system not supported without separate /boot"
-msgstr ""
+msgstr "btrfs-rodfilsystemet er ikke understøttet uden separat /boot"
 
 #. Type: error
 #. Description
 #. :sl2:
 #: ../partman-btrfs.templates:4001
-#, fuzzy
 msgid ""
 "Your root file system is a btrfs file system. This is not supported by the "
 "boot loader used by default by this installer."
 msgstr ""
-"Dit rodfilsystem er et JFS-filsystem. Dette kan give problemer med den "
+"Dit rodfilsystem er et btrfs-filsystem. Dette kan give problemer med den "
 "opstartsindlæser, der som udgangspunkt bruges af dette installationsprogram."
 
 #. Type: error
 #. Description
 #. :sl2:
 #: ../partman-btrfs.templates:4001
-#, fuzzy
 msgid ""
 "You should use a small /boot partition with another file system, such as "
 "ext4."
 msgstr ""
-"Du bør bruge en lille /boot-partition med et andet filsystem, såsom ext3."
+"Du bør bruge en lille /boot-partition med et andet filsystem, såsom ext4."
 
 #. Type: error
 #. Description
 #. :sl2:
 #: ../partman-btrfs.templates:5001
-#, fuzzy
 msgid "btrfs file system not supported for /boot"
-msgstr "Ingen filsystemer monteret på /target"
+msgstr "btrfs-filsystemet er ikke understøttet for /boot"
 
 #. Type: error
 #. Description
 #. :sl2:
 #: ../partman-btrfs.templates:5001
-#, fuzzy
 msgid ""
 "You have mounted a btrfs file system as /boot. This is not supported by the "
 "boot loader used by default by this installer."
 msgstr ""
-"Dit rodfilsystem er et JFS-filsystem som /boot. Dette kan give problemer med "
-"den opstartsindlæser, der som udgangspunkt bruges af dette "
+"Dit rodfilsystem er et btrfs-filsystem som /boot. Dette kan give problemer "
+"med den opstartsindlæser, der som udgangspunkt bruges af dette "
 "installationsprogram."
 
 #. Type: error
 #. Description
 #. :sl2:
 #: ../partman-btrfs.templates:5001
-#, fuzzy
 msgid ""
 "You should use another file system, such as ext4, for the /boot partition."
-msgstr "Du bør benytte et andet filsystem, såsom ext3, til /boot-partitionen."
+msgstr "Du bør benytte et andet filsystem, såsom ext4, til /boot-partitionen."
