--- a/debian/po/ja.po
+++ b/debian/po/ja.po
@@ -27,7 +27,7 @@ msgstr ""
 "Project-Id-Version: debian-installer\n"
 "Report-Msgid-Bugs-To: partman-btrfs@packages.debian.org\n"
 "POT-Creation-Date: 2016-10-04 22:00+0000\n"
-"PO-Revision-Date: 2016-07-07 08:21+0900\n"
+"PO-Revision-Date: 2016-12-12 22:16+0900\n"
 "Last-Translator:  Kenshi Muto <kmuto@debian.org>\n"
 "Language-Team: Debian L10n Japanese <debian-japanese@lists.debian.org>\n"
 "Language: ja\n"
@@ -61,59 +61,54 @@ msgstr "btrfs ジャーナリングファイルシステム"
 #: ../partman-btrfs.templates:4001
 msgid "btrfs root file system not supported without separate /boot"
 msgstr ""
+"/boot を分離しない場合、btrfs ルートファイルシステムはサポートされません"
 
 #. Type: error
 #. Description
 #. :sl2:
 #: ../partman-btrfs.templates:4001
-#, fuzzy
 msgid ""
 "Your root file system is a btrfs file system. This is not supported by the "
 "boot loader used by default by this installer."
 msgstr ""
-"あなたのルートファイルシステムは JFS ファイルシステムです。これはおそらく、こ"
-"のインストーラのデフォルトで使われるブートローダにおいて問題を引き起こしま"
-"す。"
+"あなたのルートファイルシステムは btrfs ファイルシステムです。このインストーラ"
+"のデフォルトで使われるブートローダではサポートされません。"
 
 #. Type: error
 #. Description
 #. :sl2:
 #: ../partman-btrfs.templates:4001
-#, fuzzy
 msgid ""
 "You should use a small /boot partition with another file system, such as "
 "ext4."
 msgstr ""
-"ext3 のような別のファイルシステムの小さな /boot パーティションを使うことをお"
+"ext4 のような別のファイルシステムの小さな /boot パーティションを使うことをお"
 "勧めします。"
 
 #. Type: error
 #. Description
 #. :sl2:
 #: ../partman-btrfs.templates:5001
-#, fuzzy
 msgid "btrfs file system not supported for /boot"
-msgstr "/target にマウントされたファイルシステムがありません"
+msgstr "/boot に btrfs ファイルシステムはサポートしていません"
 
 #. Type: error
 #. Description
 #. :sl2:
 #: ../partman-btrfs.templates:5001
-#, fuzzy
 msgid ""
 "You have mounted a btrfs file system as /boot. This is not supported by the "
 "boot loader used by default by this installer."
 msgstr ""
-"/boot に JFS ファイルシステムがマウントされています。これはおそらく、このイン"
-"ストーラのデフォルトで使われるブートローダにおいて問題を引き起こします。"
+"/boot に btrfs ファイルシステムがマウントされています。このインストーラのデ"
+"フォルトで使われるブートローダではサポートされません。"
 
 #. Type: error
 #. Description
 #. :sl2:
 #: ../partman-btrfs.templates:5001
-#, fuzzy
 msgid ""
 "You should use another file system, such as ext4, for the /boot partition."
 msgstr ""
-"/boot パーティションには、ext3 のような別のファイルシステムを使うことをお勧め"
+"/boot パーティションには、ext4 のような別のファイルシステムを使うことをお勧め"
 "します。"
