--- a/debian/po/sk.po
+++ b/debian/po/sk.po
@@ -7,13 +7,13 @@
 # Copyright (C) 2003 Software in the Public Interest, Inc.
 # This file is distributed under the same license as debian-installer.
 # Peter Mann <peter.mann@tuke.sk>
-# Ivan Masár <helix84@centrum.sk>, 2007, 2008, 2009, 2010, 2011, 2013, 2014, 2015.
+# Ivan Masár <helix84@centrum.sk>, 2007, 2008, 2009, 2010, 2011, 2013, 2014, 2015, 2017.
 # Translations from iso-codes:
 # (translations from drakfw)
 # Alastair McKinstry <mckinstry@computer.org>, 2001, 2002.
 # Copyright (C) 2002 Free Software Foundation, Inc.
 # Free Software Foundation, Inc., 2004
-# Ivan Masár <helix84@centrum.sk>, 2007, 2008, 2009, 2010, 2011, 2012, 2013, 2014, 2015.
+# Ivan Masár <helix84@centrum.sk>, 2007, 2008, 2009, 2010, 2011, 2012, 2013, 2014, 2015, 2017.
 # Translations taken from sk.wikipedia.org on 2008-06-17
 # Pavol Cvengros <orpheus@hq.alert.sk>, 2001.
 # Peter Mann <Peter.Mann@tuke.sk>, 2004, 2006.
@@ -26,8 +26,8 @@ msgstr ""
 "Project-Id-Version: debian-installer\n"
 "Report-Msgid-Bugs-To: partman-btrfs@packages.debian.org\n"
 "POT-Creation-Date: 2016-10-04 22:00+0000\n"
-"PO-Revision-Date: 2016-05-02 17:17+0200\n"
-"Last-Translator: ctenar <x>\n"
+"PO-Revision-Date: 2017-01-05 15:43+0200\n"
+"Last-Translator: Ivan Masár <helix84@centrum.sk>\n"
 "Language-Team: x\n"
 "Language: sk\n"
 "MIME-Version: 1.0\n"
@@ -78,12 +78,11 @@ msgstr ""
 #. Description
 #. :sl2:
 #: ../partman-btrfs.templates:4001
-#, fuzzy
 msgid ""
 "You should use a small /boot partition with another file system, such as "
 "ext4."
 msgstr ""
-"Mali by ste použiť malú /boot oblasť s iným súborovým systémom, napr. ext3."
+"Mali by ste použiť malú oblasť /boot s iným súborovým systémom, napr. ext4."
 
 #. Type: error
 #. Description
@@ -107,7 +106,6 @@ msgstr ""
 #. Description
 #. :sl2:
 #: ../partman-btrfs.templates:5001
-#, fuzzy
 msgid ""
 "You should use another file system, such as ext4, for the /boot partition."
-msgstr "Pre oblasť /boot by ste mali použiť iný súborový systém, napr. ext3."
+msgstr "Pre oblasť /boot by ste mali použiť iný súborový systém, napr. ext4."
