--- a/debian/po/es.po
+++ b/debian/po/es.po
@@ -17,7 +17,7 @@
 # Enrique Matias Sanchez (aka Quique) <cronopios@gmail.com>, 2005
 # Rubén Porras Campo <nahoo@inicia.es>, 2005
 # Omar Campagne <ocampagne@gmail.com>, 2010
-# Javier Fernández-Sanguino <jfs@debian.org>, 2003-2012, 2014-2015
+# Javier Fernández-Sanguino <jfs@debian.org>, 2003-2012, 2014-2017
 #
 # Equipo de traducción al español, por favor lean antes de traducir
 # los siguientes documentos:
@@ -59,8 +59,8 @@ msgstr ""
 "Project-Id-Version: debian-installer\n"
 "Report-Msgid-Bugs-To: partman-btrfs@packages.debian.org\n"
 "POT-Creation-Date: 2016-10-04 22:00+0000\n"
-"PO-Revision-Date: 2015-03-15 22:11+0100\n"
-"Last-Translator: Javier Fernández-Sanguino <jfs@debian.org>\n"
+"PO-Revision-Date: 2017-01-27 00:21+0100\n"
+"Last-Translator: Javier Fernández-Sanguino Peña <jfs@debian.org>\n"
 "Language-Team:  Debian Spanish <debian-l10n-spanish@lists.debian.org>\n"
 "Language: es\n"
 "MIME-Version: 1.0\n"
@@ -109,13 +109,12 @@ msgstr ""
 #. Description
 #. :sl2:
 #: ../partman-btrfs.templates:4001
-#, fuzzy
 msgid ""
 "You should use a small /boot partition with another file system, such as "
 "ext4."
 msgstr ""
 "Debería utilizar una pequeña partición /boot con otro sistema de ficheros, "
-"por ejemplo, ext3."
+"por ejemplo, ext4."
 
 #. Type: error
 #. Description
@@ -139,9 +138,8 @@ msgstr ""
 #. Description
 #. :sl2:
 #: ../partman-btrfs.templates:5001
-#, fuzzy
 msgid ""
 "You should use another file system, such as ext4, for the /boot partition."
 msgstr ""
-"Debería utilizar otro sistema de ficheros, por ejemplo ext3, para la "
+"Debería utilizar otro sistema de ficheros, por ejemplo ext4, para la "
 "partición /boot."
