--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+partman-btrfs (30) unstable; urgency=medium
+
+  [ Updated translations ]
+  * Spanish (es.po) by Javier Fernández-Sanguino Peña
+
+ -- Christian Perrier <bubulle@debian.org>  Tue, 31 Jan 2017 07:26:21 +0100
+
 partman-btrfs (29) unstable; urgency=medium
 
   [ Updated translations ]
