--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+partman-btrfs (31) unstable; urgency=medium
+
+  [ Updated translations ]
+  * Korean (ko.po) by Changwoo Ryu
+
+ -- Christian Perrier <bubulle@debian.org>  Tue, 14 Feb 2017 14:11:21 +0100
+
 partman-btrfs (30) unstable; urgency=medium
 
   [ Updated translations ]
