--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+partman-btrfs (32) unstable; urgency=medium
+
+  [ Updated translations ]
+  * Thai (th.po) by Theppitak Karoonboonyanan
+
+ -- Christian Perrier <bubulle@debian.org>  Fri, 24 Feb 2017 06:51:21 +0100
+
 partman-btrfs (31) unstable; urgency=medium
 
   [ Updated translations ]
