--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+partman-btrfs (34) unstable; urgency=medium
+
+  [ Updated translations ]
+  * Danish (da.po) by Joe Hansen
+
+ -- Christian Perrier <bubulle@debian.org>  Tue, 07 Mar 2017 05:52:17 +0100
+
 partman-btrfs (33) unstable; urgency=medium
 
   [ Updated translations ]
